refactor: remove query timestamps from responses
